--- a/src/ideajdbc.properties
+++ b/src/ideajdbc.properties
@@ -1,17 +1,17 @@
 ideajdbc.log=true
 
-datasource.default=emarm
+datasource.default=ideatest
 
-datasource.emarm.url=jdbc:mysql://localhost:3316/emres
-datasource.emarm.driver=com.mysql.jdbc.Driver
-datasource.emarm.username=emres
-datasource.emarm.password=emres
-datasource.emarm.pool=proxool
-datasource.emarm.maxActiveTime=300000
-datasource.emarm.maxConnections=15
-datasource.emarm.maxConnectionLifetime=1440000
-datasource.emarm.minConnections=2
-datasource.emarm.heartbeatSql=select 1
-datasource.emarm.txManager=com.ideamoment.ideajdbc.spring.SpringTxManager
-datasource.emarm.handlersocket=false
-datasource.emarm.type=mysql
+datasource.ideatest.url=jdbc:mysql://localhost:3316/ideatest
+datasource.ideatest.driver=com.mysql.jdbc.Driver
+datasource.ideatest.username=ideatest
+datasource.ideatest.password=ideatest
+datasource.ideatest.pool=proxool
+datasource.ideatest.maxActiveTime=300000
+datasource.ideatest.maxConnections=15
+datasource.ideatest.maxConnectionLifetime=1440000
+datasource.ideatest.minConnections=2
+datasource.ideatest.heartbeatSql=select 1
+datasource.ideatest.txManager=com.ideamoment.ideajdbc.spring.SpringTxManager
+datasource.ideatest.handlersocket=false
+datasource.ideatest.type=mysql
