--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -67,6 +67,10 @@
         <servlet-name>default</servlet-name> 
         <url-pattern>*.pdf</url-pattern> 
     </servlet-mapping>
+    <servlet-mapping> 
+        <servlet-name>default</servlet-name> 
+        <url-pattern>*.map</url-pattern> 
+    </servlet-mapping>
     
     <servlet> 
 	    <servlet-name>springmvc</servlet-name> 
