初步实现脚本解析功能

--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,8 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/proxool-cglib.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/zip4j_1.3.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/caserunner-0.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-4.5.3-complete.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/selenium-server-standalone-2.53.0.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
