--- a/.classpath
+++ b/.classpath
@@ -43,7 +43,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/proxool-cglib.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/zip4j_1.3.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/caserunner-0.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/caserunner-0.1.jar" sourcepath="/caserunner"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-4.5.3-complete.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
