--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -88,7 +88,7 @@
         <servlet-class>com.ideamoment.ideadp.servlet.IdeaServlet</servlet-class>
         <init-param>  
             <param-name>webRoot</param-name>  
-            <param-value>E:/iWorkspace/java/ideatesting/WebRoot</param-value>  
+            <param-value>D:/gitrepos/ideatesting/WebRoot</param-value>
         </init-param>   
         <load-on-startup>1</load-on-startup> 
     </servlet>
