--- a/.classpath
+++ b/.classpath
@@ -21,7 +21,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/freemarker.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ideaconfig-0.1.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ideadp-0.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ideajdbc-0.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ideajdbc-0.1.jar" sourcepath="/ideajdbc/src"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ideawx-0.1.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/joda-time-2.4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jstl-1.2.jar"/>
