--- a/WebRoot/WEB-INF/classes/ideajdbc.properties
+++ b/WebRoot/WEB-INF/classes/ideajdbc.properties
@@ -2,7 +2,7 @@ ideajdbc.log=true
 
 datasource.default=ideatest
 
-datasource.ideatest.url=jdbc:mysql://localhost:3306/ideatest
+datasource.ideatest.url=jdbc:mysql://localhost:3306/ideatest?characterEncoding=UTF-8
 datasource.ideatest.driver=com.mysql.jdbc.Driver
 datasource.ideatest.username=ideatest
 datasource.ideatest.password=ideatest
